plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'com.ra'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    google()
    maven {
        url "https://maven.pkg.dev/ai-generativelanguage/java"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
    implementation 'com.cloudinary:cloudinary-http44:1.37.0'
    implementation 'commons-validator:commons-validator:1.7'
    implementation 'com.cloudinary:cloudinary-http44:1.37.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

    implementation 'com.itextpdf:itextpdf:5.0.6'

    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    implementation 'org.json:json:20240303'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.apache.poi:poi-ooxml:5.2.3'

    // Gmail API
    implementation 'com.google.api-client:google-api-client:1.34.1'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.apis:google-api-services-gmail:v1-rev110-1.25.0'


    // Jakarta Mail (JavaMail)
    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    // Logging (optional, để debug lỗi)
    implementation 'org.slf4j:slf4j-api:2.0.9'
    //implementation 'org.slf4j:slf4j-simple:2.0.9'

    implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'

    implementation 'com.google.firebase:firebase-admin:9.2.0'

    implementation 'com.google.genai:google-genai:1.0.0'

}

tasks.named('test') {
    useJUnitPlatform()
}
